src/objects/User.object
<CustomObject>
    <fields>
        <fullName>DSE__DS_Data_Scout_Profile__c</fullName>
        <description>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</description>
        <inlineHelpText>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</inlineHelpText>
        <label>Cloud MDM Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_User_Created__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time User Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Email_Notification_Delegate__c</fullName>
        <description>The email address that will receive delegate notifications based on configuration settings.</description>
        <inlineHelpText>The email address that will receive delegate notifications based on configuration settings.</inlineHelpText>
        <label>Email Notification Delegate</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_User_Notification_Delegate__c</fullName>
        <description>The user that will receive delegate notifications based on configuration settings.</description>
        <inlineHelpText>The user that will receive delegate notifications based on configuration settings.</inlineHelpText>
        <label>User Notification Delegate</label>
        <relationshipName>Notification_Record_Owners</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>NA, EMEA, ROW, BD, WW.  Role up of Regions.</description>
        <label>Geo</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISR_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISR Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Netsuite_Class_ID__c</fullName>
        <description>Used for Linking the Salesforce Geo Region to Netsuite Employee Class</description>
        <label>Netsuite Class ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_ID__c</fullName>
        <description>Used for Integrating Salesforce users to Netsuite Employee</description>
        <label>Netsuite ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Geo__c</fullName>
        <inlineHelpText>Needs to be deleted</inlineHelpText>
        <label>Partner Geo</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Region_del__c</fullName>
        <label>Partner Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAmerica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalID__c</fullName>
        <label>PortalID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <formula>ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMKRViewCentral__VCPassword__c</fullName>
        <label>VCPassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMKRViewCentral__VCUserName__c</fullName>
        <label>VCUserName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region will decide the territory.</description>
        <inlineHelpText>Territory is dependent on Region.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East (Federal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Vice_President__c</fullName>
        <label>Regional Vice President</label>
        <relationshipName>RegionalVicePresident</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Send_Partner_Activation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Partner Activation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_del__c</fullName>
        <description>Territories are filtered by the Region.</description>
        <inlineHelpText>Territories are filtered by the Region.</inlineHelpText>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>West 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserContactID__c</fullName>
        <label>UserContactID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_UserId__c</fullName>
        <label>DL UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_User_Name__c</fullName>
        <label>DL User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Docusign Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Partner</value>
        </filters>
        <label>Internal Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIS_Team</group>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Partner</value>
        </filters>
        <label>Internal Inactive Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIS_Team</group>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Users_Active</fullName>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Partner_Region_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Users Active</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>